--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title> Portfólio </title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8">
 </head>
 <body>
 	<h1> Bem vindo</h1>
