Adicionando função de data

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title> Portfólio </title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta charset="utf-8">
-</head>
-<body>
-	<h1> Bem vindo</h1>
-</body>
+	<head>
+		<title> Portfólio </title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<h1> Bem vindo</h1>
+		
+		<form action="execute.php" method="POST">
+		<p>Descubra qual a data de hoje: 
+				<input type="submit" name="btnSubmit" value="Que dia é hoje?">
+		</p>
+		</form>
+	</body>
 </html>
